--- a/IST526/Lab1/index.html.html
+++ b/IST526/Lab1/index.html.html
@@ -55,9 +55,9 @@ H5P.Video=function(p,h){function f(n,e,t={}){var i=this;i.oldTime=t.previousStat
         
     </head>
     <body>
-        <div style="margin: 20px 20px;display: flex; justify-content: center;">
+        <div style="margin: 20px 20px;">
             <div
-                style="max-width:1400px;"
+                style=""
                 class="h5p-content lag" data-content-id="3473924318"></div>        
         </div>        
     </body>
