--- a/IST541/Lab1/Index.html.html
+++ b/IST541/Lab1/Index.html.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Lab1 Job Aid</title>
+ <link href="css/jobaid.css" rel="stylesheet">
 </head>
 
 <body>
@@ -26,6 +27,7 @@
 		</div>
 
 		<div class="stepImage">
+			<img src="IMG/jobaid_photos/BB1.jpg" alt="bones in pot"/>
 		</div>
 
 		</div><!--stepContent-->
@@ -46,6 +48,7 @@
 	</div>
 
 		<div class="stepImage">
+			<img src="IMG/jobaid_photos/BB2.jpg" alt=bone broth boiling/>
 		</div>
 
 		</div><!--stepContent-->
@@ -65,6 +68,7 @@
 		</div>		
 
 		<div class="stepImage">
+			<img src="IMG/jobaid_photos/BB3.jpg"/>
 		</div>
 
 		</div><!--stepContent-->
@@ -83,6 +87,7 @@
 			<p>Fill the pot with enough water to cover the bones and vegetables by about 2–3 inches. Bring to a gentle boil, and then reduce to a simmer. Skim off any foam that rises to the top. If you want to add some sweetness to the broth, you can also add two to three dry dates or figs.</p>
 		</div>
 		<div class="stepImage">
+			<img src="IMG/jobaid_photos/BB4.jpg"/>
 		</div>
 
 		</div><!--stepContent-->
@@ -101,6 +106,7 @@
 			<p>Simmer for 12–24 hours for beef bones, or 6–12 hours for chicken. The long cooking time extracts collagen, calcium, and rich flavor. Add more water if needed to keep bones submerged. </p>
 		</div>
 		<div class="stepImage">
+			<img src="IMG/jobaid_photos/BB5.jpg"/>
 		</div>
 
 		</div><!--stepContent-->
@@ -116,9 +122,11 @@
 
 		<div class="stepDescription">
 		</div>
-			<p>The soup can be enjoyed by adding salt. If you want to store the soup, allow it to become cool and strain, then store in jars in the refrigerator (up to 5 days) or freezer (up to 3 months).</p>
+			<p>The soup can be enjoyed by adding salt for taste. If you want to store the soup, allow it to become cool and strain, then store in jars in the refrigerator (up to 5 days) or freezer (up to 3 months).</p>
 		</div>
 		<div class="stepImage">
+			<img src="IMG/jobaid_photos/BB6.jpg"/>
+			<img src="IMG/jobaid_photos/BB6 pt2.jpg"/>
 		</div>
 
 		</div><!--stepContent-->
