--- a/IST541/Lab1/Index.html.html
+++ b/IST541/Lab1/Index.html.html
@@ -3,7 +3,10 @@
 <head>
 <meta charset="utf-8">
 <title>Lab1 Job Aid</title>
- <link href="css/jobaid.css" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+ <link href="../../../../../OneDrive/Documents/GitHub/Zi-guo.github.io/IST541/Lab1/CSS/jobaid.css.css" rel="stylesheet">
 </head>
 
 <body>
@@ -27,7 +30,7 @@
 		</div>
 
 		<div class="stepImage">
-			<img src="IMG/jobaid_photos/BB1.jpg" alt="bones in pot"/>
+			<img src="../../../../../OneDrive/Documents/GitHub/Zi-guo.github.io/IST541/Lab1/IMG/jobaid_photos/BB1.jpg" alt="bones in pot" width="941" height="630"/>
 		</div>
 
 		</div><!--stepContent-->
@@ -37,18 +40,18 @@
  	 <div id="step2">
 
 		<div class="stepTitle">
-		</div> 2. Boil the Bones with one cup of cooking alcohol or vodka (Optional but Recommended)
+		</div> 2. Cleaning the Bones by Boiling (Optional but Recommended)
 	</div>
 
 		<div class="stepContent">
 
 		<div class="stepDescription">
 		</div>
-			<p>Boil the bone with a cup of concentrated alcohol to get rid of any excessive fat and impurities from the bones. </p>
+			<p>Boil the bone with a cup of concentrated alcohol to get rid of any excessive fat and impurities.</p>
 	</div>
 
 		<div class="stepImage">
-			<img src="IMG/jobaid_photos/BB2.jpg" alt=bone broth boiling/>
+			<img src="../../../../../OneDrive/Documents/GitHub/Zi-guo.github.io/IST541/Lab1/IMG/jobaid_photos/BB2.jpg" alt=bone width="941" height="630" broth boiling/>
 		</div>
 
 		</div><!--stepContent-->
@@ -68,7 +71,7 @@
 		</div>		
 
 		<div class="stepImage">
-			<img src="IMG/jobaid_photos/BB3.jpg"/>
+			<img src="../../../../../OneDrive/Documents/GitHub/Zi-guo.github.io/IST541/Lab1/IMG/jobaid_photos/BB3.jpg" width="507" height="630"/>
 		</div>
 
 		</div><!--stepContent-->
@@ -87,7 +90,7 @@
 			<p>Fill the pot with enough water to cover the bones and vegetables by about 2–3 inches. Bring to a gentle boil, and then reduce to a simmer. Skim off any foam that rises to the top. If you want to add some sweetness to the broth, you can also add two to three dry dates or figs.</p>
 		</div>
 		<div class="stepImage">
-			<img src="IMG/jobaid_photos/BB4.jpg"/>
+			<img src="../../../../../OneDrive/Documents/GitHub/Zi-guo.github.io/IST541/Lab1/IMG/jobaid_photos/BB4.jpg" width="942" height="630"/>
 		</div>
 
 		</div><!--stepContent-->
@@ -106,7 +109,7 @@
 			<p>Simmer for 12–24 hours for beef bones, or 6–12 hours for chicken. The long cooking time extracts collagen, calcium, and rich flavor. Add more water if needed to keep bones submerged. </p>
 		</div>
 		<div class="stepImage">
-			<img src="IMG/jobaid_photos/BB5.jpg"/>
+			<img src="../../../../../OneDrive/Documents/GitHub/Zi-guo.github.io/IST541/Lab1/IMG/jobaid_photos/BB5.jpg"/>
 		</div>
 
 		</div><!--stepContent-->
@@ -125,8 +128,8 @@
 			<p>The soup can be enjoyed by adding salt for taste. If you want to store the soup, allow it to become cool and strain, then store in jars in the refrigerator (up to 5 days) or freezer (up to 3 months).</p>
 		</div>
 		<div class="stepImage">
-			<img src="IMG/jobaid_photos/BB6.jpg"/>
-			<img src="IMG/jobaid_photos/BB6 pt2.jpg"/>
+			<img src="../../../../../OneDrive/Documents/GitHub/Zi-guo.github.io/IST541/Lab1/IMG/jobaid_photos/BB6.jpg"/>
+			<img src="../../../../../OneDrive/Documents/GitHub/Zi-guo.github.io/IST541/Lab1/IMG/jobaid_photos/BB6 pt2.jpg"/>
 		</div>
 
 		</div><!--stepContent-->
