--- a/IST541/Lab1/Index.html.html
+++ b/IST541/Lab1/Index.html.html
@@ -14,14 +14,15 @@
   
     <div id="header">
     </div>
-		<h1> How to make bone borth</h1>
-		<h2> By Zi Guo</h2> <br>
+		<h1> <strong>How to make Bone Broth</strong></h1>
+		<h1><strong> By Zi Guo</strong></h1> 
+		<br>
 
     <div id="step1">
 
 		<div class="stepTitle">
-		</div> Step 1: Select Your Bones 
-
+		</div> 
+		<h2>Step 1: Select Your Bones </h2>
 		<div class="stepContent">
 
 		<div class="stepDescription">
@@ -40,8 +41,9 @@
  	 <div id="step2">
 
 		<div class="stepTitle">
-		</div> 2. Cleaning the Bones by Boiling (Optional but Recommended)
-	</div>
+		</div> 
+		<h2>2. Cleaning the Bones by Boiling (Optional but Recommended) </h2>
+    </div>
 
 		<div class="stepContent">
 
@@ -61,8 +63,8 @@
 		<div id="step3">
 
 		<div class="stepTitle">
-		</div> 3. Add Aromatics
-
+		</div> 
+		<h2>3. Add Aromatics </h2>
 		<div class="stepContent">
 
 		<div class="stepDescription">
@@ -81,8 +83,8 @@
 	<div id="step4">
 
 		<div class="stepTitle">
-		</div> 4. Add Water
-
+		</div> 
+		<h2>4. Add Water </h2>
 		<div class="stepContent">
 
 		<div class="stepDescription">
@@ -100,8 +102,8 @@
 	<div id="step5">
 
 		<div class="stepTitle">
-		</div> 5. Simmer Slowly
-
+		</div> 
+		<h2>5. Simmer Slowly </h2>
 		<div class="stepContent">
 
 		<div class="stepDescription">
@@ -119,8 +121,10 @@
 	<div id="step6">
 
 		<div class="stepTitle">
-		</div>6. Last adjustments & Store
-
+		</div>
+		<h2>6. Last adjustments & Store
+		  
+	  </h2>
 		<div class="stepContent">
 
 		<div class="stepDescription">
