--- a/IST541/Lab1/Index.html.html
+++ b/IST541/Lab1/Index.html.html
@@ -14,9 +14,8 @@
   
     <div id="header">
     </div>
-		<h1> <strong>How to make Bone Broth</strong></h1>
-		<h1><strong> By Zi Guo</strong></h1> 
-		<br>
+		<h1> How to make bone borth</h1>
+		<h2> By Zi Guo</h2> <br>
 
     <div id="step1">
 
@@ -31,7 +30,7 @@
 		</div>
 
 		<div class="stepImage">
-			<img src="../../../../../OneDrive/Documents/GitHub/Zi-guo.github.io/IST541/Lab1/IMG/jobaid_photos/BB1.jpg" alt="bones in pot" width="941" height="630"/>
+			<img src="IMG/BB1.jpg" alt="bones in pot" width="1920" height="1280"/>
 		</div>
 
 		</div><!--stepContent-->
@@ -53,7 +52,7 @@
 	</div>
 
 		<div class="stepImage">
-			<img src="../../../../../OneDrive/Documents/GitHub/Zi-guo.github.io/IST541/Lab1/IMG/jobaid_photos/BB2.jpg" alt=bone width="941" height="630" broth boiling/>
+			<img src="IMG/BB2.jpg" alt=bone width="1920" height="1280" broth boiling/>
 		</div>
 
 		</div><!--stepContent-->
@@ -73,7 +72,7 @@
 		</div>		
 
 		<div class="stepImage">
-			<img src="../../../../../OneDrive/Documents/GitHub/Zi-guo.github.io/IST541/Lab1/IMG/jobaid_photos/BB3.jpg" width="507" height="630"/>
+			<img src="../../../../../OneDrive/Documents/GitHub/Zi-guo.github.io/IST541/Lab1/IMG/jobaid_photos/BB3.jpg" width="768" height="960"/>
 		</div>
 
 		</div><!--stepContent-->
@@ -92,7 +91,7 @@
 			<p>Fill the pot with enough water to cover the bones and vegetables by about 2–3 inches. Bring to a gentle boil, and then reduce to a simmer. Skim off any foam that rises to the top. If you want to add some sweetness to the broth, you can also add two to three dry dates or figs.</p>
 		</div>
 		<div class="stepImage">
-			<img src="../../../../../OneDrive/Documents/GitHub/Zi-guo.github.io/IST541/Lab1/IMG/jobaid_photos/BB4.jpg" width="942" height="630"/>
+			<img src="../../../../../OneDrive/Documents/GitHub/Zi-guo.github.io/IST541/Lab1/IMG/jobaid_photos/BB4.jpg" width="730" height="487"/>
 		</div>
 
 		</div><!--stepContent-->
@@ -144,3 +143,10 @@
 
 </body>
 </html>
+
+body {
+  font-family: "Alegreya", serif;
+  font-optical-sizing: auto;
+  font-weight: <300-800>;
+  font-style: normal;
+}
