--- a/IST541/Lab1/Index.html.html
+++ b/IST541/Lab1/Index.html.html
@@ -5,8 +5,7 @@
 <title>Lab1 Job Aid</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
- <link href="../../../../../OneDrive/Documents/GitHub/Zi-guo.github.io/IST541/Lab1/CSS/jobaid.css.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -30,7 +29,7 @@
 		</div>
 
 		<div class="stepImage">
-			<img src="IMG/BB1.jpg" alt="bones in pot" width="1920" height="1280"/>
+			<img src="IMG/BB1.jpg" alt="bones in pot" width="518" height="350"/>
 		</div>
 
 		</div><!--stepContent-->
@@ -52,7 +51,7 @@
 	</div>
 
 		<div class="stepImage">
-			<img src="IMG/BB2.jpg" alt=bone width="1920" height="1280" broth boiling/>
+			<img src="IMG/BB2.jpg" alt=bone width="518" height="350" broth boiling/>
 		</div>
 
 		</div><!--stepContent-->
@@ -72,7 +71,7 @@
 		</div>		
 
 		<div class="stepImage">
-			<img src=IMG/BB3.jpg width="768" height="960"/>
+			<img src=IMG/BB3.jpg width="384" height="478"/>
 		</div>
 
 		</div><!--stepContent-->
@@ -91,7 +90,7 @@
 			<p>Fill the pot with enough water to cover the bones and vegetables by about 2–3 inches. Bring to a gentle boil, and then reduce to a simmer. Skim off any foam that rises to the top. If you want to add some sweetness to the broth, you can also add two to three dry dates or figs.</p>
 		</div>
 		<div class="stepImage">
-			<img src="IMG/BB4.jpg" width="730" height="487"/>
+			<img src="IMG/BB4.jpg" width="526" height="350"/>
 		</div>
 
 		</div><!--stepContent-->
@@ -110,7 +109,7 @@
 			<p>Simmer for 12–24 hours for beef bones, or 6–12 hours for chicken. The long cooking time extracts collagen, calcium, and rich flavor. Add more water if needed to keep bones submerged. </p>
 		</div>
 		<div class="stepImage">
-			<img src="IMG/BB5.jpg"/>
+			<img src="IMG/BB5.jpg" height="350"/>
 		</div>
 
 		</div><!--stepContent-->
@@ -131,8 +130,8 @@
 			<p>The soup can be enjoyed by adding salt for taste. If you want to store the soup, allow it to become cool and strain, then store in jars in the refrigerator (up to 5 days) or freezer (up to 3 months).</p>
 		</div>
 		<div class="stepImage">
-			<img src="IMG/BB6.jpg"/>
-			<img src="IMG/BB6 pt2.jpg"/>
+			<img src="IMG/BB6.jpg" height="350"/>
+			<img src="IMG/BB6 pt2.jpg" height="350"/>
 		</div>
 
 		</div><!--stepContent-->
