--- a/IST541/Lab1/Index.html.html
+++ b/IST541/Lab1/Index.html.html
@@ -48,8 +48,8 @@
 
 		<div class="stepDescription">
 		</div>
-			<p>Boil the bone with a cup of concentrated alcohol to get rid of any excessive fat and impurities.</p>
-	</div>
+			<h3>Boil the bone with a cup of concentrated alcohol to get rid of any excessive fat and impurities.</h3>
+    </div>
 
 		<div class="stepImage">
 			<img src="IMG/BB2.jpg" alt=bone width="518" height="350" broth boiling/>
@@ -68,7 +68,7 @@
 
 		<div class="stepDescription">
 		</div>
-			<p>Place bones in a large pot or slow cooker. Add onions, carrots, celery, garlic, and herbs (like bay leaves, parsley, or thyme). One tea spoon of apple cider vinegar helps draw minerals out of the bones.</p>
+			<h3>Place bones in a large pot or slow cooker. Add onions, carrots, celery, garlic, and herbs (like bay leaves, parsley, or thyme). One tea spoon of apple cider vinegar helps draw minerals out of the bones.</h3>
 		</div>		
 
 		<div class="stepImage">
@@ -88,7 +88,7 @@
 
 		<div class="stepDescription">
 		</div>
-			<p>Fill the pot with enough water to cover the bones and vegetables by about 2–3 inches. Bring to a gentle boil, and then reduce to a simmer. Skim off any foam that rises to the top. If you want to add some sweetness to the broth, you can also add two to three dry dates or figs.</p>
+			<h3>Fill the pot with enough water to cover the bones and vegetables by about 2–3 inches. Bring to a gentle boil, and then reduce to a simmer. Skim off any foam that rises to the top. If you want to add some sweetness to the broth, you can also add two to three dry dates or figs.</h3>
 		</div>
 		<div class="stepImage">
 			<img src="IMG/BB4.jpg" width="526" height="350"/>
@@ -107,7 +107,7 @@
 
 		<div class="stepDescription">
 		</div>
-			<p>Simmer for 12–24 hours for beef bones, or 6–12 hours for chicken. The long cooking time extracts collagen, calcium, and rich flavor. Add more water if needed to keep bones submerged. </p>
+			<h3>Simmer for 12–24 hours for beef bones, or 6–12 hours for chicken. The long cooking time extracts collagen, calcium, and rich flavor. Add more water if needed to keep bones submerged. </h3>
 		</div>
 		<div class="stepImage">
 			<img src="IMG/BB5.jpg" height="350"/>
@@ -128,7 +128,7 @@
 
 		<div class="stepDescription">
 		</div>
-			<p>The soup can be enjoyed by adding salt for taste. If you want to store the soup, allow it to become cool and strain, then store in jars in the refrigerator (up to 5 days) or freezer (up to 3 months).</p>
+			<h3>The soup can be enjoyed by adding salt for taste. If you want to store the soup, allow it to become cool and strain, then store in jars in the refrigerator (up to 5 days) or freezer (up to 3 months).</h3>
 		</div>
 		<div class="stepImage">
 			<img src="IMG/BB6.jpg" height="350"/>
