--- a/IST541/Lab1/Index.html.html
+++ b/IST541/Lab1/Index.html.html
@@ -68,7 +68,7 @@
 
 		<div class="stepDescription">
 		</div>
-			<h3>Place bones in a large pot or slow cooker. Add onions, carrots, celery, garlic, and herbs (like bay leaves, parsley, or thyme). One tea spoon of apple cider vinegar helps draw minerals out of the bones.</h3>
+			<h3>Place bones in a large pot or slow cooker. Add onions, carrots, celery, garlic, and herbs (like bay leaves, parsley, or thyme). One tea spoon of apple cider vinegar helps draw minerals out of the bones.(Optional) </h3>
 		</div>		
 
 		<div class="stepImage">
