--- a/IST541/Lab1/Index.html.html
+++ b/IST541/Lab1/Index.html.html
@@ -3,10 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Lab1 Job Aid</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<link href="css/jobaid.css.css" rel="stylesheet">
+<link href="css/jobaid.css" rel="stylesheet">
 </head>
 
 <body>
