--- a/IST541/Lab1/Index.html
+++ b/IST541/Lab1/Index.html
@@ -8,14 +8,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <link href="css/jobaid.css" rel="stylesheet">
 </head>
-
+	
 <body>
 	<div id="wrapper">
   
     <div id="header">
     </div>
 		<h1> How to make bone borth</h1>
-		<h2> By Zi Guo</h2> <br>
+		<h2> By Zi Guo</h2> <br />
 
     <div id="step1">
 
