--- a/IST541/Lab1/Index.html
+++ b/IST541/Lab1/Index.html
@@ -11,7 +11,7 @@
   
     <div id="header">
     </div>
-		<h1> How to make bone borth</h1>
+		<h1> How to make bone broth</h1>
 		<h2> By Zi Guo</h2> <br />
 
     <div id="step1">
