--- a/IST541/Lab1/Index.html
+++ b/IST541/Lab1/Index.html
@@ -1,144 +1,130 @@
-<!doctype html>
-<html>
+<<!doctype html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Lab1 Job Aid</title>
-<link href="css/jobaid.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <title>Lab1 Job Aid – How to Make Bone Broth</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="css/jobaid.css" rel="stylesheet">
 </head>
-	
 <body>
-	<div id="wrapper">
-  
-    <div id="header">
-    </div>
-		<h1> How to make bone broth</h1>
-		<h2> By Zi Guo</h2> <br />
+  <div id="wrapper">
+    <header id="header"></header>
 
-    <div id="step1">
+    <h1>How to Make Bone Broth</h1>
+    <h2>By Zi Guo</h2>
 
-		<div class="stepTitle">
-		</div> 
-		<h2>Step 1: Select Your Bones </h2>
-		<div class="stepContent">
+    <!-- STEP 1 -->
+    <section id="step1" class="step">
+      <div class="stepTitle">Step 1: Select Your Bones</div>
 
-		<div class="stepDescription">
-		</div>
-			<p>Choose a mix of marrow bones, knucklebones, and meaty bones (like beef, chicken, or pork). The variety adds both flavor and nutrients. </p>
-		</div>
+      <div class="stepContent">
+        <div class="stepDescription">
+          <p>
+            Choose a mix of marrow bones, knucklebones, and meaty bones (beef, chicken, or pork).
+            The variety adds both flavor and nutrients.
+          </p>
+        </div>
 
-		<div class="stepImage">
-			<img src="IMG/BB1.jpg" alt="bones in pot" width="518" height="350"/>
-		</div>
+        <div class="stepImage">
+          <img src="IMG/BB1.jpg" alt="Assorted marrow and knucklebones in a stock pot">
+        </div>
+      </div><!-- /.stepContent -->
+    </section>
 
-		</div><!--stepContent-->
+    <!-- STEP 2 -->
+    <section id="step2" class="step">
+      <div class="stepTitle">Step 2: Clean the Bones by Boiling (Optional but Recommended)</div>
 
-    </div><!--step1-->
+      <div class="stepContent">
+        <div class="stepDescription">
+          <p>
+            Parboil the bones briefly (you can add a cup of cooking alcohol if desired) to remove
+            excess fat and impurities. Skim and rinse before proceeding.
+          </p>
+        </div>
 
- 	 <div id="step2">
+        <div class="stepImage">
+          <img src="IMG/BB2.jpg" alt="Bones parboiling in a pot to remove impurities">
+        </div>
+      </div><!-- /.stepContent -->
+    </section>
 
-		<div class="stepTitle">
-		</div> 
-		<h2>2. Cleaning the Bones by Boiling (Optional but Recommended) </h2>
-    </div>
+    <!-- STEP 3 -->
+    <section id="step3" class="step">
+      <div class="stepTitle">Step 3: Add Aromatics</div>
 
-		<div class="stepContent">
+      <div class="stepContent">
+        <div class="stepDescription">
+          <p>
+            Place bones in a large pot or slow cooker. Add onions, carrots, celery, garlic, and herbs
+            (bay leaves, parsley, thyme). A teaspoon of apple cider vinegar can help draw minerals
+            from the bones (optional).
+          </p>
+        </div>
 
-		<div class="stepDescription">
-		</div>
-			<h3>Boil the bone with a cup of concentrated alcohol to get rid of any excessive fat and impurities.</h3>
-    </div>
+        <div class="stepImage">
+          <img src="IMG/BB3.jpg" alt="Bones with onions, carrots, celery, and herbs in a pot">
+        </div>
+      </div><!-- /.stepContent -->
+    </section>
 
-		<div class="stepImage">
-			<img src="IMG/BB2.jpg" alt=bone width="518" height="350" broth boiling/>
-		</div>
+    <!-- STEP 4 -->
+    <section id="step4" class="step">
+      <div class="stepTitle">Step 4: Add Water</div>
 
-		</div><!--stepContent-->
+      <div class="stepContent">
+        <div class="stepDescription">
+          <p>
+            Add enough water to cover bones and vegetables by 2–3 inches. Bring to a gentle boil,
+            then reduce to a simmer. Skim foam as it rises. For a touch of sweetness, add 2–3 dried
+            dates or figs.
+          </p>
+        </div>
 
-    </div><!--step2-->
-		
-		<div id="step3">
+        <div class="stepImage">
+          <img src="IMG/BB4.jpg" alt="Pot filled with water covering bones and vegetables">
+        </div>
+      </div><!-- /.stepContent -->
+    </section>
 
-		<div class="stepTitle">
-		</div> 
-		<h2>3. Add Aromatics </h2>
-		<div class="stepContent">
+    <!-- STEP 5 -->
+    <section id="step5" class="step">
+      <div class="stepTitle">Step 5: Simmer Slowly</div>
 
-		<div class="stepDescription">
-		</div>
-			<h3>Place bones in a large pot or slow cooker. Add onions, carrots, celery, garlic, and herbs (like bay leaves, parsley, or thyme). One tea spoon of apple cider vinegar helps draw minerals out of the bones.(Optional) </h3>
-		</div>		
+      <div class="stepContent">
+        <div class="stepDescription">
+          <p>
+            Simmer 12–24 hours for beef bones or 6–12 hours for chicken. Top up with water as needed
+            to keep bones submerged. The long cook extracts collagen, calcium, and deep flavor.
+          </p>
+        </div>
 
-		<div class="stepImage">
-			<img src=IMG/BB3.jpg width="384" height="478"/>
-		</div>
+        <div class="stepImage">
+          <img src="IMG/BB5.jpg" alt="Broth simmering gently on the stovetop">
+        </div>
+      </div><!-- /.stepContent -->
+    </section>
 
-		</div><!--stepContent-->
+    <!-- STEP 6 -->
+    <section id="step6" class="step">
+      <div class="stepTitle">Step 6: Final Adjustments &amp; Storage</div>
 
-    </div><!--step3-->
-		
-	<div id="step4">
+      <div class="stepContent">
+        <div class="stepDescription">
+          <p>
+            Season to taste with salt. Cool slightly, strain, and store in jars: up to
+            <strong>5 days</strong> in the refrigerator or up to <strong>3 months</strong> in the freezer.
+          </p>
+        </div>
 
-		<div class="stepTitle">
-		</div> 
-		<h2>4. Add Water </h2>
-		<div class="stepContent">
+        <div class="stepImage">
+          <img src="IMG/BB6.jpg" alt="Golden bone broth in a ladle over a pot">
+          <img src="IMG/BB6-pt2.jpg" alt="Portioned bone broth stored in jars">
+          <!-- If you keep the original file with a space, use: src="IMG/BB6%20pt2.jpg" -->
+        </div>
+      </div><!-- /.stepContent -->
+    </section>
 
-		<div class="stepDescription">
-		</div>
-			<h3>Fill the pot with enough water to cover the bones and vegetables by about 2–3 inches. Bring to a gentle boil, and then reduce to a simmer. Skim off any foam that rises to the top. If you want to add some sweetness to the broth, you can also add two to three dry dates or figs.</h3>
-		</div>
-		<div class="stepImage">
-			<img src="IMG/BB4.jpg" width="526" height="350"/>
-		</div>
-
-		</div><!--stepContent-->
-
-    </div><!--step4-->
-		
-	<div id="step5">
-
-		<div class="stepTitle">
-		</div> 
-		<h2>5. Simmer Slowly </h2>
-		<div class="stepContent">
-
-		<div class="stepDescription">
-		</div>
-			<h3>Simmer for 12–24 hours for beef bones, or 6–12 hours for chicken. The long cooking time extracts collagen, calcium, and rich flavor. Add more water if needed to keep bones submerged. </h3>
-		</div>
-		<div class="stepImage">
-			<img src="IMG/BB5.jpg" height="350"/>
-		</div>
-
-		</div><!--stepContent-->
-
-    </div><!--step5-->
-		
-	<div id="step6">
-
-		<div class="stepTitle">
-		</div>
-		<h2>6. Last adjustments & Store
-		  
-	  </h2>
-		<div class="stepContent">
-
-		<div class="stepDescription">
-		</div>
-			<h3>The soup can be enjoyed by adding salt for taste. If you want to store the soup, allow it to become cool and strain, then store in jars in the refrigerator (up to 5 days) or freezer (up to 3 months).</h3>
-		</div>
-		<div class="stepImage">
-			<img src="IMG/BB6.jpg" height="350"/>
-			<img src="IMG/BB6 pt2.jpg" height="350"/>
-		</div>
-
-		</div><!--stepContent-->
-
-    </div><!--step6-->
-		
-</div><!--wrapper-->
-
+  </div><!-- /#wrapper -->
 </body>
 </html>
-
-}
