--- a/IST541/Lab1/Index.html
+++ b/IST541/Lab1/Index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="stepImage">
-          <img src="IMG/BB1.jpg" alt="Assorted marrow and knucklebones in a stock pot">
+          <img src="IMG/BB1.jpg" alt="Assorted marrow and knucklebones in a stock pot" height="350">
         </div>
       </div><!-- /.stepContent -->
     </section>
@@ -38,13 +38,13 @@
       <div class="stepContent">
         <div class="stepDescription">
           <p>
-            Parboil the bones briefly (you can add a cup of cooking alcohol if desired) to remove
+            Pre-boil the bones briefly (you can add a cup of cooking alcohol if desired) to remove
             excess fat and impurities. Skim and rinse before proceeding.
           </p>
         </div>
 
         <div class="stepImage">
-          <img src="IMG/BB2.jpg" alt="Bones parboiling in a pot to remove impurities">
+          <img src="IMG/BB2.jpg" alt="Bones parboiling in a pot to remove impurities" height="350">
         </div>
       </div><!-- /.stepContent -->
     </section>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="stepImage">
-          <img src="IMG/BB3.jpg" alt="Bones with onions, carrots, celery, and herbs in a pot">
+          <img src="IMG/BB3.jpg" alt="Bones with onions, carrots, celery, and herbs in a pot" width="384" height="478">
         </div>
       </div><!-- /.stepContent -->
     </section>
@@ -82,7 +82,7 @@
         </div>
 
         <div class="stepImage">
-          <img src="IMG/BB4.jpg" alt="Pot filled with water covering bones and vegetables">
+          <img src="IMG/BB4.jpg" alt="Pot filled with water covering bones and vegetables" height="350">
         </div>
       </div><!-- /.stepContent -->
     </section>
@@ -100,7 +100,7 @@
         </div>
 
         <div class="stepImage">
-          <img src="IMG/BB5.jpg" alt="Broth simmering gently on the stovetop">
+          <img src="IMG/BB5.jpg" alt="Broth simmering gently on the stovetop" height="350">
         </div>
       </div><!-- /.stepContent -->
     </section>
@@ -118,9 +118,9 @@
         </div>
 
         <div class="stepImage">
-          <img src="IMG/BB6.jpg" alt="Golden bone broth in a ladle over a pot">
-          <img src="IMG/BB6-pt2.jpg" alt="Portioned bone broth stored in jars">
-          <!-- If you keep the original file with a space, use: src="IMG/BB6%20pt2.jpg" -->
+          <img src="IMG/BB6.jpg" alt="Golden bone broth in a ladle over a pot" width="420" height="350">
+          <img src="IMG/BB6 pt2.jpg" alt="Portioned bone broth stored in jars" height="350">
+          
         </div>
       </div><!-- /.stepContent -->
     </section>
