--- a/IST541/Lab1/Index.html
+++ b/IST541/Lab1/Index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="stepImage">
-          <img src="IMG/BB1.jpg" alt="Assorted marrow and knucklebones in a stock pot" height="350">
+          <img src="IMG/BB1.jpg" alt="Assorted marrow and knucklebones in a stock pot" width="518" height="350">
         </div>
       </div><!-- /.stepContent -->
     </section>
