--- a/IST541/Lab1/Index.html
+++ b/IST541/Lab1/Index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="stepImage">
-          <img src="IMG/BB2.jpg" alt="Bones parboiling in a pot to remove impurities" height="350">
+          <img src="IMG/BB2.jpg" alt="Bones parboiling in a pot to remove impurities" width="518" height="350">
         </div>
       </div><!-- /.stepContent -->
     </section>
@@ -82,7 +82,7 @@
         </div>
 
         <div class="stepImage">
-          <img src="IMG/BB4.jpg" alt="Pot filled with water covering bones and vegetables" height="350">
+          <img src="IMG/BB4.jpg" alt="Pot filled with water covering bones and vegetables" width="526" height="350">
         </div>
       </div><!-- /.stepContent -->
     </section>
@@ -100,7 +100,7 @@
         </div>
 
         <div class="stepImage">
-          <img src="IMG/BB5.jpg" alt="Broth simmering gently on the stovetop" height="350">
+          <img src="IMG/BB5.jpg" alt="Broth simmering gently on the stovetop" width="522" height="350">
         </div>
       </div><!-- /.stepContent -->
     </section>
@@ -119,7 +119,7 @@
 
         <div class="stepImage">
           <img src="IMG/BB6.jpg" alt="Golden bone broth in a ladle over a pot" width="420" height="350">
-          <img src="IMG/BB6 pt2.jpg" alt="Portioned bone broth stored in jars" height="350">
+          <img src="IMG/BB6 pt2.jpg" alt="Portioned bone broth stored in jars" width="522" height="350">
           
         </div>
       </div><!-- /.stepContent -->
