--- a/IST541/Lab1/Index.html
+++ b/IST541/Lab1/Index.html
@@ -33,7 +33,7 @@
 
     <!-- STEP 2 -->
     <section id="step2" class="step">
-      <div class="stepTitle">Step 2: Clean the Bones by Boiling (Optional but Recommended)</div>
+      <div class="stepTitle">Step 2: Clean the Bones by Boiling </div>
 
       <div class="stepContent">
         <div class="stepDescription">
