--- a/IST541/Lab1/Index.html
+++ b/IST541/Lab1/Index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Lab1 Job Aid – How to Make Bone Broth</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/jobaid.css" rel="stylesheet">
+  <link href="css/jobaid.css?v=2" rel="stylesheet">
 </head>
 <body>
   <div id="wrapper">
