--- a/IST541/Lab1/Index.html
+++ b/IST541/Lab1/Index.html
@@ -1,15 +1,14 @@
 <<!doctype html>
-<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Lab1 Job Aid – How to Make Bone Broth</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="/IST541/Lab1/css/jobaid.css?v=6" rel="stylesheet">
+  <link href="css/jobaid.css" rel="stylesheet">
 
 </head>
 <body>
   <div id="wrapper">
-    <header id="header"></header>
+    <div id="header">
+	</div>
 
     <h1>How to Make Bone Broth</h1>
     <h2>By Zi Guo</h2>
