--- a/IST541/Lab1/Index.html
+++ b/IST541/Lab1/Index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title>Lab1 Job Aid – How to Make Bone Broth</title>
-  <link href="css/jobaid.css" rel="stylesheet">
+  <link href="css/jobaid.css" rel="stylesheet" type=“text/css"> 
 
 </head>
 <body>
