--- a/IST541/Lab1/Index.html
+++ b/IST541/Lab1/Index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title>Lab1 Job Aid – How to Make Bone Broth</title>
-  <link href="css/jobaid.css" rel="stylesheet" type=“text/css"> 
+ <link rel="stylesheet" href="css/jobaid.css"> 
 
 </head>
 <body>
@@ -19,7 +19,7 @@
       <div class="stepContent">
         <div class="stepDescription">
           <p>
-            Choose a mix of marrow bones, knucklebones, and meaty bones (beef, chicken, or pork).
+            Choose a mix of: <li>marrow bones</li> <li>knucklebones</li> <li>meaty bones (beef, chicken, or pork)</li>
             The variety adds both flavor and nutrients.
           </p>
         </div>
@@ -37,8 +37,8 @@
       <div class="stepContent">
         <div class="stepDescription">
           <p>
-            Pre-boil the bones briefly (you can add a cup of cooking alcohol if desired) to remove
-            excess fat and impurities. Skim and rinse before proceeding.
+            <li>Pre-boil the bones briefly (you can add a cup of cooking alcohol if desired) to remove
+            excess fat and impurities. </li> <li>Skim and rinse before proceeding.</li>
           </p>
         </div>
 
@@ -55,9 +55,10 @@
       <div class="stepContent">
         <div class="stepDescription">
           <p>
-            Place bones in a large pot or slow cooker. Add onions, carrots, celery, garlic, and herbs
-            (bay leaves, parsley, thyme). A teaspoon of apple cider vinegar can help draw minerals
-            from the bones (optional).
+            <li>Place bones in a large pot or slow cooker.</li>
+			<li>Add onions, carrots, celery, garlic, and herbs
+            (bay leaves, parsley, thyme).</li> <li>A teaspoon of apple cider vinegar can help draw minerals
+            from the bones (optional).</li>
           </p>
         </div>
 
@@ -74,9 +75,9 @@
       <div class="stepContent">
         <div class="stepDescription">
           <p>
-            Add enough water to cover bones and vegetables by 2–3 inches. Bring to a gentle boil,
-            then reduce to a simmer. Skim foam as it rises. For a touch of sweetness, add 2–3 dried
-            dates or figs.
+            <li>Add enough water to cover bones and vegetables by 2–3 inches.</li> <li>Bring to a gentle boil,
+            then reduce to a simmer. Skim foam as it rises.</li> <li>For a touch of sweetness, add 2–3 dried
+            dates or figs.</li>
           </p>
         </div>
 
@@ -93,8 +94,8 @@
       <div class="stepContent">
         <div class="stepDescription">
           <p>
-            Simmer 12–24 hours for beef bones or 6–12 hours for chicken. Top up with water as needed
-            to keep bones submerged. The long cook extracts collagen, calcium, and deep flavor.
+            <li></li>Simmer 12–24 hours for beef bones or 6–12 hours for chicken.</li> <li>Top up with water as needed
+            to keep bones submerged.</li> <li>The long cook extracts collagen, calcium, and deep flavor.</li>
           </p>
         </div>
 
@@ -111,7 +112,7 @@
       <div class="stepContent">
         <div class="stepDescription">
           <p>
-            Season to taste with salt. Cool slightly, strain, and store in jars: up to
+            Season to taste with salt. Cool slightly, strain, and store in jar up to
             <strong>5 days</strong> in the refrigerator or up to <strong>3 months</strong> in the freezer.
           </p>
         </div>
@@ -125,5 +126,7 @@
     </section>
 
   </div><!-- /#wrapper -->
+<a href="https://www.youtube.com/watch?v=V43x4zt6Oc4"> How to make bone broth</a>
+
 </body>
 </html>
