--- a/IST541/Lab1/Index.html
+++ b/IST541/Lab1/Index.html
@@ -18,8 +18,7 @@
 
       <div class="stepContent">
         <div class="stepDescription">
-          <p>
-            Choose a mix of: <li>marrow bones</li> <li>knucklebones</li> <li>meaty bones (beef, chicken, or pork)</li>
+          <p>Choose a mix of: <li>marrow bones</li> <li>knucklebones</li> <li>meaty bones (beef, chicken, or pork)</li>
             The variety adds both flavor and nutrients.
           </p>
         </div>
@@ -36,9 +35,9 @@
 
       <div class="stepContent">
         <div class="stepDescription">
-          <p>
-            <li>Pre-boil the bones briefly (you can add a cup of cooking alcohol if desired) to remove
-            excess fat and impurities. </li> <li>Skim and rinse before proceeding.</li>
+          <p>Pre-boil the bones briefly (you can add a cup of cooking alcohol if desired) to remove
+            excess fat and impurities.            
+          <li>Skim and rinse before proceeding.</li>
           </p>
         </div>
 
@@ -54,8 +53,7 @@
 
       <div class="stepContent">
         <div class="stepDescription">
-          <p>
-            <li>Place bones in a large pot or slow cooker.</li>
+          <p>Place bones in a large pot or slow cooker.          
 			<li>Add onions, carrots, celery, garlic, and herbs
             (bay leaves, parsley, thyme).</li> <li>A teaspoon of apple cider vinegar can help draw minerals
             from the bones (optional).</li>
@@ -73,9 +71,8 @@
       <div class="stepTitle">Step 4: Add Water</div>
 
       <div class="stepContent">
-        <div class="stepDescription">
-          <p>
-            <li>Add enough water to cover bones and vegetables by 2–3 inches.</li> <li>Bring to a gentle boil,
+        <div class="stepDescription"><li>Add enough water to cover bones and vegetables by 2–3 inches.</li>    
+          <li>Bring to a gentle boil,
             then reduce to a simmer. Skim foam as it rises.</li> <li>For a touch of sweetness, add 2–3 dried
             dates or figs.</li>
           </p>
@@ -92,9 +89,8 @@
       <div class="stepTitle">Step 5: Simmer Slowly</div>
 
       <div class="stepContent">
-        <div class="stepDescription">
-          <p>
-            <li></li>Simmer 12–24 hours for beef bones or 6–12 hours for chicken.</li> <li>Top up with water as needed
+        <div class="stepDescription"><li>Simmer 12–24 hours for beef bones or 6–12 hours for chicken.</li>           
+          <li>Top up with water as needed
             to keep bones submerged.</li> <li>The long cook extracts collagen, calcium, and deep flavor.</li>
           </p>
         </div>
@@ -125,8 +121,16 @@
       </div><!-- /.stepContent -->
     </section>
 
-  </div><!-- /#wrapper -->
-<a href="https://www.youtube.com/watch?v=V43x4zt6Oc4"> How to make bone broth</a>
+  </div>
+  <p><!-- /#wrapper -->    </p>
+  References
+  Pictures:
+  <li>Atomically safe images labeled'Bone Broth, What’s the Difference...'”</li>
+<li>Fluent Foodie’s <li>“Chicken Bone Broth”</li>
+  <li> Sea Salt Savorings’ “Homemade chicken bone broth”</li>
+  <li>The Forked Spoon’s “Bone Broth Recipe”</li>
+  <p>
+Video: <a href="https://www.youtube.com/watch?v=V43x4zt6Oc4">How to make bone broth</a></p>
 
 </body>
 </html>
