--- a/IST541/Lab2/Index.html
+++ b/IST541/Lab2/Index.html
@@ -13,8 +13,8 @@
 	</div>
 
     <!-- STEP 1 -->
-    <section id="step1" class="step">
-      <div class="stepTitle">Step 1: Select Your Bones</div>
+    <details>
+      <summary class="stepTitle">Step 1: Select Your Bones</summary>
 
       <div class="stepContent">
         <div class="stepDescription">
@@ -24,7 +24,7 @@
         </div>
 
         <div class="stepImage">
-          <img src="IMG/BB1.jpg" alt="Assorted marrow and knucklebones in a stock pot" width="518" height="350">
+          <img src="../Lab1/IMG/BB1.jpg" alt="Assorted marrow and knucklebones in a stock pot" width="518" height="350">
         </div>
       </div><!-- /.stepContent -->
     </section>
@@ -42,7 +42,7 @@
         </div>
 
         <div class="stepImage">
-          <img src="IMG/BB2.jpg" alt="Bones parboiling in a pot to remove impurities" width="518" height="350">
+          <img src="../Lab1/IMG/BB2.jpg" alt="Bones parboiling in a pot to remove impurities" width="518" height="350">
         </div>
       </div><!-- /.stepContent -->
     </section>
@@ -61,7 +61,7 @@
         </div>
 
         <div class="stepImage">
-          <img src="IMG/BB3.jpg" alt="Bones with onions, carrots, celery, and herbs in a pot" width="384" height="478">
+          <img src="../Lab1/IMG/BB3.jpg" alt="Bones with onions, carrots, celery, and herbs in a pot" width="518" height="350">
         </div>
       </div><!-- /.stepContent -->
     </section>
@@ -79,7 +79,7 @@
         </div>
 
         <div class="stepImage">
-          <img src="IMG/BB4.jpg" alt="Pot filled with water covering bones and vegetables" width="526" height="350">
+          <img src="../Lab1/IMG/BB4.jpg" alt="Pot filled with water covering bones and vegetables" width="526" height="350">
         </div>
       </div><!-- /.stepContent -->
     </section>
@@ -96,7 +96,7 @@
         </div>
 
         <div class="stepImage">
-          <img src="IMG/BB5.jpg" alt="Broth simmering gently on the stovetop" width="522" height="350">
+          <img src="../Lab1/IMG/BB5.jpg" alt="Broth simmering gently on the stovetop" width="522" height="350">
         </div>
       </div><!-- /.stepContent -->
     </section>
@@ -114,8 +114,8 @@
         </div>
 
         <div class="stepImage">
-          <img src="IMG/BB6.jpg" alt="Golden bone broth in a ladle over a pot" width="420" height="350">
-          <img src="IMG/BB6 pt2.jpg" alt="Portioned bone broth stored in jars" width="522" height="350">
+          <img src="../Lab1/IMG/BB6.jpg" alt="Golden bone broth in a ladle over a pot" width="520" height="478">
+          <img src="../Lab1/IMG/BB6 pt2.jpg" alt="Portioned bone broth stored in jars" width="520" height="478">
           
         </div>
       </div><!-- /.stepContent -->
