--- a/IST541/Lab2/Index.html
+++ b/IST541/Lab2/Index.html
@@ -27,7 +27,7 @@
           <img src="../Lab1/IMG/BB1.jpg" alt="Assorted marrow and knucklebones in a stock pot" width="518" height="350">
         </div>
       </div><!-- /.stepContent -->
-    </section>
+    </details>
 
     <!-- STEP 2 -->
     <section id="step2" class="step">
