--- a/IST541/Lab2/Index.html
+++ b/IST541/Lab2/Index.html
@@ -12,8 +12,9 @@
     <h2>By Zi Guo</h2>
 	</div>
 
+	  
     <!-- STEP 1 -->
-    <details>
+    <details open>
       <summary class="stepTitle">Step 1: Select Your Bones</summary>
 
       <div class="stepContent">
